--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="header">
+            <div class="logo">Header Logo</div>
+            <div class="header-links">
+                <div><a href="#">Header Link 1</a></div>
+                <div><a href="#">Header Link 2</a></div>
+                <div><a href="#">Header Link 3</a></div>
+            </div>
+        </div>
     </body>
 </html>
