this was a lot before committing but created the 'random' section, which is the 'teams that we beat' section

--- a/index.html
+++ b/index.html
@@ -26,8 +26,25 @@
             </div>
         </div>
         <div class="random">
-            <div class="random_title">Some Random Information</div>
-            
+            <div class="random_title">Teams that we Beat</div>
+            <div class="subs">
+                <div class="sub">
+                    <div class="sub1img"><img src="https://play.usaultimate.org/assets/TeamLogos/16114671_179719285841884_2640214520065559246_n.png" alt="Atlanta Dirty Bird" height=100 width=100></div>
+                    <div class="sub1txt">Dirty Bird. This was an exciting game but we dogged them.</div>
+                </div>
+                <div class="sub">
+                    <div class="sub2img"><img src="https://play.usaultimate.org/assets/TeamLogos/SF_Crest.png" alt="Huntsville Space Force" height=100 width=100></div>
+                    <div class="sub2txt">Space 4th. This was the biggest game and upset I have ever been a part of.</div>
+                </div>
+                <div class="sub">
+                    <div class="sub3img"><img src="https://play.usaultimate.org/assets/TeamLogos/loco_logo.jpg" alt="West Chester Loco" height=100 width=100></div>
+                    <div class="sub3txt">Loco. This game should've been a lot easier than it was. But it was for a cross-regional dub.</div>
+                </div>
+                <div class="sub">
+                    <div class="sub4img"><img src="https://play.usaultimate.org/assets/TeamLogos/Bonnie_Clyde.jpg" alt="Dallas Public Enemy" height=100 width=100></div>
+                    <div class="sub4txt">Public Enemy. This team, I've watched for years. And getting to score the game winning goal is beyond memorable.</div>
+                </div>
+            </div>
         </div>
     </body>
 </html>
