I did a lot. oopsie. But I made the sign and formatted it.

--- a/index.html
+++ b/index.html
@@ -46,5 +46,18 @@
                 </div>
             </div>
         </div>
+        <div class="quote">
+            <div class="painfultruth"><em>"Here's the painful truth. Most dreams never come true. It isn't because people are not working hard enough. It is not because they are not worthy or they are not good. It is the simple reality that the things you are dreaming about are hard as hell to accomplish."</em></div>
+            <div class="author">-Tom Bilyeu</div>
+        </div>
+        <div class="action">
+            <div class="sign">
+                <div class="txt">
+                    <div class="head">So you think you're good enough to play?</div>
+                    <div class="click">Go ahead and click that button over there!</div>
+                </div>
+                <div class="join"><button class="welcome"><a href="#">Join the Dark Side</a></button>
+            </div>
+        </div>
     </body>
 </html>
