created the footer which was maybe the easiest part of this whole thing... I think I'm done

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
                     <div class="head">So you think you're good enough to play?</div>
                     <div class="click">Go ahead and click that button over there!</div>
                 </div>
-                <div class="join"><button class="welcome"><a href="#">Join the Dark Side</a></button>
+                <div class="join"><button class="welcome"><a href="#">Join the Dark Side</a></button></div>
             </div>
         </div>
+        <div class="footer">That's right. I made this all on my own in only two days</div>
     </body>
 </html>
